Rename notebooks and remove duplicates

--- a/notebooks/Cahn-Hilliard-Equation.ipynb
+++ b/notebooks/Cahn-Hilliard-Equation.ipynb
@@ -12,14 +12,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##MKS for The Cahn-Hilliard Equation\n",
+      "##The Cahn-Hilliard Equation\n",
       "\n",
-      "####Reference Medium \n",
+      "####Perturbation from Average Concentration \n",
       "\n",
-      "Let's first assume that we are looking at a function $\\phi (x,t)$ that represents the concentration of a phase of interest at location $x$ and and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{\\phi}$ (also known as the reference medium) and a local perturbation from that average concentration $\\phi'(x,t)$ at location $x$ and time $t$ as shown below.\n",
+      "Let's assume that we are looking at a concentration field that is represented by a function $\\phi (x,t)$ which provides the local concentration field at location $x$ and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{\\phi}$ and a local perturbation from that average concentration $\\phi'(x,t)$ at location $x$ and time $t$ as shown below.\n",
       "\n",
-      "$$ \\phi(x,t) = \\bar{\\phi} + \\phi'(x,t) $$\n",
-      "\n"
+      "$$ \\phi(x,t) = \\bar{\\phi} + \\phi'(x,t) $$"
      ]
     },
     {
@@ -32,13 +31,13 @@
       "\n",
       "$$ \\frac{\\partial \\phi(x,t)}{\\partial t} = \\nabla \\cdot D \\nabla \\Big(\\frac{\\partial f(\\phi(x,t))}{\\partial \\phi} + \\nabla^2 \\epsilon^2 \\phi(x,t) \\Big) $$\n",
       "\n",
-      "Where  $D$ is the diffusion coefficient, $f(\\phi(x,t))$ is the free energy function, and $\\epsilon$ is the  length of interface region. $f(\\phi(x, t))$ is a double well potential and can be represented as a fourth-order polynomial.\n",
+      "$D$ is the diffusion coefficient, $f(\\phi(x,t))$ is the free energy function, and $\\epsilon$ is the  length of interface region. $f(\\phi(x, t))$ is a double well potential and can be represented as a fourth-order polynomial.\n",
       "\n",
       "$$ f(\\phi(x,t)) = \\frac{a^2}{2}\\phi(x,t)^2(1 - \\phi(x,t)^2) $$\n",
       "\n",
-      "where $F$ is the magnitude of the energy barrier. By substituting the fourth-order polynomial in for the free energy function and assuming that $D$, $\\epsilon^2$ and $a$ are constants, the Cahn-Hilliard equation takes the following form.\n",
+      "$a$ is a free parameter used to fit the magnitude of the energy barrier. By substituting the fourth-order polynomial in for the free energy function and assuming that $D$, $\\epsilon^2$ and $a$ are constants, the Cahn-Hilliard equation takes the following form.\n",
       "\n",
-      "$$ \\frac{\\partial \\phi(x,t)}{\\partial t} = D\\nabla^2 \\Big(a^2 \\big[\\phi(x,t)(1 - 2 \\phi(x, t)^2 \\big] + \\epsilon^2 \\nabla^2 \\phi(x,t) \\Big) $$\n"
+      "$$ \\frac{\\partial \\phi(x,t)}{\\partial t} = D\\nabla^2 \\Big(a^2 \\big[\\phi(x,t)(1 - 2 \\phi(x, t)^2 \\big] + \\epsilon^2 \\nabla^2 \\phi(x,t) \\Big) $$"
      ]
     },
     {
@@ -47,16 +46,9 @@
      "source": [
       "####Reference Medium in Cahn-Hilliard Equation\n",
       "\n",
-      "Substituting in the concentration in terms of the average concentration and the local perturbation we get the following equation.\n",
+      "Let's substitute the local perturbation definition of the concentration into the Cahn-Hilliard equation, and remove all terms that equal zero.\n",
       "\n",
       "$$ \\frac{\\partial (\\bar{\\phi} + \\phi')}{\\partial t} = D\\nabla^2 \\Big(a^2 \\big[(\\bar{\\phi} + \\phi') (1 - (\\bar{\\phi} + \\phi')^2\\big] + \\epsilon^2\\nabla^2  (\\bar{\\phi} + \\phi') \\Big) $$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "$$ \\frac{\\partial (\\bar{\\phi} + \\phi')}{\\partial t} = D\\nabla^2 \\Big(a^2 \\big[ (\\bar{\\phi} - \\bar{\\phi}^3 - 3 (\\phi' \\bar{\\phi}^2 + \\phi'^2 \\bar{\\phi}) -\\phi'^3 + \\phi' \\big] + \\epsilon^2\\nabla^2  (\\bar{\\phi} + \\phi') \\Big) $$\n"
      ]
     },
     {
@@ -77,11 +69,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let \n",
+      "Now let the right hand side of the equation above represent an inhomogenous term $f$ for the Cahn-Hilliard equation\n",
       "\n",
       "$$ f(x, t) = 3 D a^2 \\nabla^2 (\\phi' \\bar{\\phi}^2 + \\phi'^2 \\bar{\\phi})$$\n",
       "\n",
-      "therefore \n",
+      "Using this definition, the Cahn-Hilliard equation can be cast in terms of a inhomogenous equation.\n",
       "\n",
       "$$ \\frac{\\partial  \\phi'}{\\partial t} - D\\nabla^2 \\Big(a^2 \\big[ \\phi' -\\phi'^3 \\big] + \\epsilon^2\\nabla^2  (\\phi') \\Big) =  f(x, t)$$"
      ]
@@ -92,7 +84,7 @@
      "source": [
       "####Green's Functions\n",
       "\n",
-      "A green's function is a powerful method to solve linear inhomogenous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the Cahn-Hillarid equation.\n",
+      "A green's function is a powerful method to solve linear inhomogenous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the Cahn-Hillarid \"operator\".\n",
       "\n",
       "$$ \\frac{\\partial  G(x-x',t-t')}{\\partial t} = D\\nabla^2 \\Big(a^2 \\big[ G(x-x',t-t') -G(x-x',t-t')^3 \\big] + \\epsilon^2\\nabla^2  (\\phi') \\Big) =  \\delta(x-x')\\delta(t-t')$$\n",
       "\n",
@@ -128,15 +120,13 @@
      "source": [
       "####Kroner's Expansion\n",
       "\n",
-      "By take the definition of $\\phi'$ and substituing it back into the right side for it self, we get the following expansion."
+      "By take the definition of $\\phi'$ and substituing it back into the right side for it self, we can create a series expansion. Let's first collect terms by powers of $\\phi'$."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\nabla_x^2 G(x - x',t - t') 3 D a^2 (\\phi'(x',t') \\bar{\\phi}^2 + \\phi'(x',t')^2 \\bar{\\phi}) dx' dt' $$\n",
-      "\n",
       "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\nabla_x^2 G(x - x',t - t') 3 D a^2 \\bar{\\phi}^2 \\phi'(x',t') dx' dt' + \\int_0^t \\int_V \\nabla_x^2 G(x - x',t - t') 3 D a^2 \\bar{\\phi} \\phi'(x', t')^2  dx' dt' $$"
      ]
     },
@@ -144,7 +134,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let\n",
+      "In order to reduce the clutter during the substitutions, let's make the following create the following definitions. \n",
       "\n",
       "$$A(x -x',t) = G(x - x',t)$$\n",
       "$$B(x -x',t - t') = \\nabla_x^2 G(x - x',t - t') 3 D a^2 \\bar{\\phi}^2$$\n",
@@ -177,6 +167,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Now replacing $A$, $B$ and $C$ with their original definitions get the series expansion.\n",
+      "\n",
       "\\begin{eqnarray}  \\phi'(x, t) = && \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\int_V \\nabla_x^2 G(x - x',t - t') 3 D a^2 \\bar{\\phi}^2  G(x' - x'',t) \\phi(x'', 0) dx'' dx' dt'+ \\\\&& \\int_0^t \\int_V \\int_V \\int_V \\nabla_x^2 G(x - x',t - t') 3 D a^2 \\bar{\\phi}  G(x' - x'',t) G(x' - x''',t) \\phi(x'', 0) \\phi(x''', 0) dx''' dx'' dx' dt' + ...\\end{eqnarray}"
      ]
     },
@@ -184,18 +176,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "####Converion Creiteria \n",
+      "####Convergence Criterion\n",
       "\n",
-      "$$ G(x - x',t) \\phi(x', 0) < 1 $$"
+      "In order for this series to rapidly convert as least the following criterion must be met.  \n",
+      "\n",
+      "$$\\int_V G(x - x',t) \\phi(x', 0) dx' < 1 $$"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
