--- a/notebooks/Cahn-Hilliard-and-Diffusion.ipynb
+++ b/notebooks/Cahn-Hilliard-and-Diffusion.ipynb
@@ -1,7 +1,6 @@
 {
  "metadata": {
-  "name": "",
-  "signature": "sha256:8cd4e77fa419c787a44708778be7df3af580f09cb71028d10defed6103b6e1e6"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -97,7 +96,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "\n",
       "The convolution of a green's function with an inhomogenous term gives the solution to the differential equation. This can be proven by first showing that a convolution with the left hand side of the equation above and an inhomogenous term $f(x', t')$ recovers the inhomogenous term.\n",
       "\n",
       "$$ \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - \\tilde D\\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' = \\int_0^t \\int_V \\delta(x-x')\\delta(t - t') f(x', t')dx' dt' = f(x, t)$$\n",
@@ -116,7 +114,7 @@
       "\n",
       "If the initial conditions are inhomogenous, an additional term can be added to provide that information.\n",
       "\n",
-      "$$ \\phi' =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n"
+      "$$ \\phi' =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$"
      ]
     },
     {
@@ -133,7 +131,7 @@
       "\n",
       "The $\\nabla^2$ operator can be moved from the terms containing $\\phi$ to the green's function by using integration by parts and assuming periodic boundary conditions.\n",
       "\n",
-      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\nabla_x^4 G(x - x',t - t') D  \\epsilon^2 \\phi'(x', t') - \\nabla_x^2 G(x - x',t - t') D  \\Big ( a^2 \\big [3\\phi'(x', t') \\bar{\\phi}^2 + 3\\phi'(x', t')^2 \\bar{\\phi} -\\phi'(x', t')^3\\big ] \\Big ) dx' dt' $$\n"
+      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\nabla_x^4 G(x - x',t - t') D  \\epsilon^2 \\phi'(x', t') - \\nabla_x^2 G(x - x',t - t') D  \\Big ( a^2 \\big [3\\phi'(x', t') \\bar{\\phi}^2 + 3\\phi'(x', t')^2 \\bar{\\phi} -\\phi'(x', t')^3\\big ] \\Big ) dx' dt' $$"
      ]
     },
     {
@@ -142,7 +140,7 @@
      "source": [
       "####Kroner's Expansion\n",
       "\n",
-      "By take the definition of $\\phi'$ and substituing it back into the right side for it self, we can create a series expansion. Let's first collect terms by powers of $\\phi'$.\n"
+      "By take the definition of $\\phi'$ and substituing it back into the right side for it self, we can create a series expansion. Let's first collect terms by powers of $\\phi'$."
      ]
     },
     {
@@ -207,9 +205,7 @@
       "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
       "\\phi'(x'', t'')^3 \n",
       "dx'' dt'' \\Bigg )^3\n",
-      "\\Bigg ] dx' dt' +... \\end{eqnarray}\n",
-      "\n",
-      "\n"
+      "\\Bigg ] dx' dt' +... \\end{eqnarray}\n"
      ]
     },
     {
@@ -255,7 +251,7 @@
       "A(x' - x''',t) \n",
       "\\phi(x''', 0) \n",
       "A(x' - x'''',t) \n",
-      "\\phi(x'''', 0) dx'''' dx''' dx'' dx' dt' + ...\\end{eqnarray}\n"
+      "\\phi(x'''', 0) dx'''' dx''' dx'' dx' dt' + ...\\end{eqnarray}"
      ]
     },
     {
@@ -287,7 +283,7 @@
       " \\Bigg )^3\n",
       "\\int_0^t  \\int_V \n",
       "D  a^2 \\nabla_x^2 G(x - x',t - t') \n",
-      "dx' dt' + ...\\end{eqnarray} \n"
+      "dx' dt' + ...\\end{eqnarray} "
      ]
     },
     {
