--- a/notebooks/MKS-and-Diffusion.ipynb
+++ b/notebooks/MKS-and-Diffusion.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1758c57680f67c59eba96d3090a973abacafe92cabeffac132d5fa2182094a8e"
+  "signature": "sha256:37c6dd77d773592cef2c7b78305b7b4b33b9e2090ddb07badf5c2ce465c4f874"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,9 +38,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "####Anistropic Diffusion Equation with Perturbations.\n",
+      "####Anisotropic Diffusion Equation with Perturbations.\n",
       "\n",
-      "Let's substitute the local perturbation definition of the concentration into the diffusion equation and add a simular term for the diffusivity, and remove all terms that equal zero.\n",
+      "Let's substitute the local perturbation definition of the concentration and a similar term for diffusivity into the diffusion equation and remove all terms that equal zero.\n",
       "\n",
       "$$ D(\\phi, x) = \\bar{D} + D'(\\phi, x)$$\n",
       "\n",
@@ -65,7 +65,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The equation above can be rearranged to take the form of an inhomogenous diffusion equation."
+      "The equation above can be rearranged to take the form of an inhomogeneous diffusion equation."
      ]
     },
     {
@@ -79,12 +79,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now let the right hand side of the equation above represent an inhomogenous term $f$ to a diffusion equation, \n",
+      "Now let the right hand side of the equation above represent an inhomogeneous term $f$ to a diffusion equation, \n",
       "\n",
       "$$ f(x, t) = \\nabla \\cdot \\Big [ D'(\\phi, x) \\nabla \\phi'(x,t)\\Big ] $$\n",
       "\n",
       "\n",
-      "Using these definitions, the perturbed diffusion equation can be cast in terms of a inhomogenous diffusion equation.\n",
+      "Using these definitions, the perturbed diffusion equation can be cast in terms of a inhomogeneous diffusion equation.\n",
       "\n",
       "$$ \\frac{\\partial  \\phi'(x, t)}{\\partial t} -  \\bar{D} \\nabla^2 \\phi'(x, t) = f(x, t)$$"
      ]
@@ -95,7 +95,7 @@
      "source": [
       "####Green's Functions\n",
       "\n",
-      "A green's function is a powerful method to solve linear inhomogenous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the diffusion operator.\n",
+      "A green's function is a powerful method to solve linear inhomogeneous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the diffusion operator.\n",
       "\n",
       "$$ \\frac{\\partial G(x-x',t-t')}{\\partial t} - \\bar D\\nabla_x^2 G(x-x',t-t')  = \\delta(x-x') \\delta(t-t') $$"
      ]
@@ -104,23 +104,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The convolution of a green's function with an inhomogenous term gives the solution to the differential equation. This can be proven by first showing that a convolution with the left hand side of the equation above and an inhomogenous term $f(x', t')$ recovers the inhomogenous term.\n",
+      "The convolution of a green's function with an inhomogeneous term gives the solution to the differential equation. This can be proven by first showing that a convolution with the left hand side of the equation above and an inhomogeneous term $f(x', t')$ recovers the inhomogeneous term.\n",
       "\n",
       "$$ \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - \\bar D\\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' = \\int_0^t \\int_V \\delta(x-x')\\delta(t - t') f(x', t')dx' dt' = f(x, t)$$\n",
       "\n",
-      "By substituing the convolution expression for the inhomogenous term we get the following equation.\n",
+      "By substituting the convolution expression for the inhomogeneous term we get the following equation.\n",
       "\n",
       "$$ \\frac{\\partial \\phi'}{\\partial t} - \\bar D\\nabla_x^2 \\phi' = \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - \\bar D\\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' $$\n",
       "\n",
-      "Because the diffusion operator differientates with respect to $t$ and $x$ and the integral is with respect to $t'$ and $x'$, the operator can be pulled out of the integral.\n",
+      "Because the diffusion operator differentiates with respect to $t$ and $x$ and the integral is with respect to $t'$ and $x'$, the operator can be pulled out of the integral.\n",
       "\n",
       "$$ \\Bigg[ \\frac{\\partial }{\\partial t} - \\bar D\\nabla_x^2 \\Bigg] \\phi' = \\Bigg[ \\frac{\\partial }{\\partial t} - \\bar D\\nabla_x^2 \\Bigg]  \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
       "\n",
-      "By removing the diffusion operator, we get an equation that relates the concentration $\\phi'$ to a convolution with the green's function and an inhomogenous term.\n",
+      "By removing the diffusion operator, we get an equation that relates the concentration $\\phi'$ to a convolution with the green's function and an inhomogeneous term.\n",
       "\n",
       "$$ \\phi' =  \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
       "\n",
-      "If the initial conditions are inhomogenous, an additional term can be added to provide that information.\n",
+      "If the initial conditions are inhomogeneous, an additional term can be added to provide that information.\n",
       "\n",
       "$$ \\phi' =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$"
      ]
@@ -150,7 +150,7 @@
      "source": [
       "####Kroner's Expansion\n",
       "\n",
-      "By take the definition of $\\phi'$ and substituing it back into the right side for it self, we can create a series expansion. Let's first collect terms by powers of $\\phi'$."
+      "By take the definition of $\\phi'$ and substituting it back into the right side for it self, we can create a series expansion. Let's first collect terms by powers of $\\phi'$."
      ]
     }
    ],
