Add Legendre basis portion
Address issue #141

Add Legendre polynomial portion of the basis. This version of the
associated Legendre polynomials are different from the Legendre
polynomials and the spherical harmonics in numpy. They are the
bunge-euler representation of the polynomials.

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6c440f17c1efcfe5e5f5fcf752a7560886817e48cfc9b632450c140ab01d39ca"
+  "signature": "sha256:42faafa574fcf6527614986cf8e0f8e4f9da769687233694c7d4260b3df0938f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -50,7 +50,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -71,7 +71,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -84,7 +84,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -103,14 +103,13 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "D0 = sy.Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2 * 1]])\n",
-      "D0 = sy.Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2 * 1]])\n",
+      "D = sy.Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2 * 1]])\n",
       "print D"
      ],
      "language": "python",
@@ -120,30 +119,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Matrix([[x, 0, 0], [x, 0, 0], [0, 0, x*z]])\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sy.GramSchmidt(D)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "'Symbol' object has no attribute 'values'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-6-af5c376bbaa7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGramSchmidt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mD\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m/home/david/anaconda/lib/python2.7/site-packages/sympy/matrices/dense.pyc\u001b[0m in \u001b[0;36mGramSchmidt\u001b[1;34m(vlist, orthog)\u001b[0m\n\u001b[0;32m   1532\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1533\u001b[0m             \u001b[0mtmp\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mvlist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1534\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mtmp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1535\u001b[0m             raise ValueError(\n\u001b[0;32m   1536\u001b[0m                 \"GramSchmidt: vector set not linearly independent\")\n",
-        "\u001b[1;31mAttributeError\u001b[0m: 'Symbol' object has no attribute 'values'"
+        "Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2]])\n"
        ]
       }
      ],
@@ -161,13 +137,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "And(im(x) == 0, re(x) == 1.0)"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -191,7 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -203,7 +179,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -236,6 +212,85 @@
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import math\n",
+      "def legnedre(l, m, n, Phi):\n",
+      "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * math.factorial(l - m)))\n",
+      "    norm2 = math.sqrt(float(math.factorial(l - m) * math.factorial(l + n)) / float(math.factorial(l + m) * math.factorial(l - n)))\n",
+      "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
+      "    poly2 = poly_diff(l, m, n, Phi)\n",
+      "    return norm1 * norm2 * poly1 * poly2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def poly_diff(l, m, n, Phi):\n",
+      "    return sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "q1 = np.array([legnedre(0, 0, 0, Phi).subs(Phi, x).evalf() for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
+      "# q1 = np.array([sy.limit(legnedre(2, -2, 1, Phi), Phi, x) for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
+      "test_poly = - 1 / 2. * np.sqrt(3 / 2.) * (- sy.cos(Phi) ** 2 + 1)\n",
+      "q2 = np.array([test_poly.subs(Phi, x).evalf() for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
+      "print q1\n",
+      "# print q2\n",
+      "print (q1 - q2)\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1.00000000000000 1.00000000000000 1.00000000000000 1.00000000000000\n",
+        " 1.00000000000000 1.00000000000000 1.00000000000000 1.00000000000000\n",
+        " 1.00000000000000 1.00000000000000]\n",
+        "[1.00000000000000 1.05847636416556 1.21156947308951 1.40080296260629\n",
+        " 1.55389607153024 1.61237243569579 1.55389607153024 1.40080296260629\n",
+        " 1.21156947308951 1.05847636416556]\n"
+       ]
+      }
+     ],
+     "prompt_number": 163
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "poly_diff(1, 0, 0, Phi)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "float(math.factorial(1 - 1) * math.factorial(1 + 0)) / float((math.factorial(1 + 1) * math.factorial(1 - 0)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
