Add GSH function and Cubic Symmetry
Address issue #141

Add GSH function with complex exponentials. Add array with cubic
symmetries. The symmetries for the other crystal systems still
need to be added.

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:42faafa574fcf6527614986cf8e0f8e4f9da769687233694c7d4260b3df0938f"
+  "signature": "sha256:c91792327b84ab65491a662f90b76dced8173276a443ed4697a1519ff3850a55"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,127 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#Test sympy"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "M = sy.Matrix([[1, -1], [3, 4], [0, 2]]) \n",
-      "print M"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Matrix([[1, -1], [3, 4], [0, 2]])\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "x, y, z = sy.Symbol('x'), sy.Symbol('y'), sy.Symbol('z')\n",
-      "Msy = sy.Matrix([[4 * x, 3 * y], [3 * z * x, 4 * z], [0, 2 * x * y]]) \n",
-      "print Msy"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Matrix([[4*x, 3*y], [3*x*z, 4*z], [0, 2*x*y]])\n"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "A = Msy * Msy.T\n",
-      "B = sy.Matrix([[x, 0, 0], [0, y ** 2, 0], [0, 0, z * x]])\n",
-      "C = sy.Matrix([[1, 0, 0], [0, - 2, 0], [0, 0, 3]])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print sy.solve(B - C, x, y, z)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[(1, -sqrt(2)*I, 3), (1, sqrt(2)*I, 3)]\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "D = sy.Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2 * 1]])\n",
-      "print D"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Matrix([[1, 0, 0], [1, 0, 0], [0, 0, 2]])\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sy.solve([x >= 0.5, x <= 3, x**2 - 1], x)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "And(im(x) == 0, re(x) == 1.0)"
-       ]
-      }
-     ],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "#GSH"
+      "#Bunge-Euler Legendre Polynomials"
      ]
     },
     {
@@ -167,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -179,7 +59,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -191,7 +71,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -205,20 +85,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 5,
        "text": [
         "10"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import math\n",
-      "def legnedre(l, m, n, Phi):\n",
+      "def legendre(l, m, n, Phi):\n",
       "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * math.factorial(l - m)))\n",
       "    norm2 = math.sqrt(float(math.factorial(l - m) * math.factorial(l + n)) / float(math.factorial(l + m) * math.factorial(l - n)))\n",
       "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
@@ -228,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -240,19 +120,117 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "q1 = np.array([legnedre(0, 0, 0, Phi).subs(Phi, x).evalf() for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
-      "# q1 = np.array([sy.limit(legnedre(2, -2, 1, Phi), Phi, x) for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
-      "test_poly = - 1 / 2. * np.sqrt(3 / 2.) * (- sy.cos(Phi) ** 2 + 1)\n",
-      "q2 = np.array([test_poly.subs(Phi, x).evalf() for x in np.arange(0, sy.pi, sy.pi / 10)])\n",
-      "print q1\n",
-      "# print q2\n",
-      "print (q1 - q2)\n"
+      "legendre(1, 0, 0, Phi)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "1.0*cos(Phi)"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# GSH Functions"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def GSH(l, m, n, ph1, Phi, ph2):\n",
+      "    lg = legendre(l, m, n, Phi)\n",
+      "    return sy.exp(np.complex(0, 1) * m * phi1) * lg * sy.exp(np.complex(0, 1) * n * phi2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "GSH(1, 1, 1, phi1, Phi, phi2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "0.5*(cos(Phi) + 1.0)**1.0*exp(1.0*I*phi1)*exp(1.0*I*phi2)"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Cubic Symmetries"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cubic_sym = np.zeros(((3, 3, 24)))\n",
+      "cubic_sym[:,:,0] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]] \n",
+      "cubic_sym[:,:,1] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,2] = [[ 1, 0, 0], [ 0, 0,-1], [ 0, 1, 0]] \n",
+      "cubic_sym[:,:,3] = [[ 1, 0, 0], [ 0, 0, 1], [ 0,-1, 0]]\n",
+      "cubic_sym[:,:,4] = [[-1, 0, 0], [ 0, 1, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,5] = [[-1, 0, 0], [ 0,-1, 0], [ 0, 0, 1]]\n",
+      "cubic_sym[:,:,6] = [[-1, 0, 0], [ 0, 0,-1], [ 0,-1, 0]] \n",
+      "cubic_sym[:,:,7] = [[-1, 0, 0], [ 0, 0, 1], [ 0, 1, 0]]\n",
+      "cubic_sym[:,:,8] = [[ 0, 1, 0], [-1, 0, 0], [ 0, 0, 1]]\n",
+      "cubic_sym[:,:,9] =[[ 0, 1, 0], [ 0, 0,-1], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,10] =[[ 0, 1, 0], [ 1, 0, 0], [ 0, 0,-1]] \n",
+      "cubic_sym[:,:,11] =[[ 0, 1, 0], [ 0, 0, 1], [ 1, 0, 0]]\n",
+      "cubic_sym[:,:,12] =[[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]] \n",
+      "cubic_sym[:,:,13] =[[ 0,-1, 0], [ 0, 0,-1], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,14] =[[ 0,-1, 0], [-1, 0, 0], [ 0, 0,-1]]\n",
+      "cubic_sym[:,:,15] =[[ 0,-1, 0], [ 0, 0, 1], [-1, 0, 0]]\n",
+      "cubic_sym[:,:,16] =[[ 0, 0, 1], [ 0, 1, 0], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,17] =[[ 0, 0, 1], [ 1, 0, 0], [ 0, 1, 0]] \n",
+      "cubic_sym[:,:,18] =[[ 0, 0, 1], [ 0,-1, 0], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,19] =[[ 0, 0, 1], [-1, 0, 0], [ 0,-1, 0]]\n",
+      "cubic_sym[:,:,20] =[[ 0, 0,-1], [ 0, 1, 0], [ 1, 0, 0]] \n",
+      "cubic_sym[:,:,21] =[[ 0, 0,-1], [-1, 0, 0], [ 0, 1, 0]]\n",
+      "cubic_sym[:,:,22] =[[ 0, 0,-1], [ 0,-1, 0], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,23] =[[ 0, 0,-1], [ 1, 0, 0], [ 0,-1, 0]]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for ii in range(24):\n",
+      "    print cubic_sym[..., ii]\n",
+      "    print ''"
      ],
      "language": "python",
      "metadata": {},
@@ -261,36 +239,106 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[1.00000000000000 1.00000000000000 1.00000000000000 1.00000000000000\n",
-        " 1.00000000000000 1.00000000000000 1.00000000000000 1.00000000000000\n",
-        " 1.00000000000000 1.00000000000000]\n",
-        "[1.00000000000000 1.05847636416556 1.21156947308951 1.40080296260629\n",
-        " 1.55389607153024 1.61237243569579 1.55389607153024 1.40080296260629\n",
-        " 1.21156947308951 1.05847636416556]\n"
+        "[[ 1.  0.  0.]\n",
+        " [ 0.  1.  0.]\n",
+        " [ 0.  0.  1.]]\n",
+        "\n",
+        "[[ 1.  0.  0.]\n",
+        " [ 0. -1.  0.]\n",
+        " [ 0.  0. -1.]]\n",
+        "\n",
+        "[[ 1.  0.  0.]\n",
+        " [ 0.  0. -1.]\n",
+        " [ 0.  1.  0.]]\n",
+        "\n",
+        "[[ 1.  0.  0.]\n",
+        " [ 0.  0.  1.]\n",
+        " [ 0. -1.  0.]]\n",
+        "\n",
+        "[[-1.  0.  0.]\n",
+        " [ 0.  1.  0.]\n",
+        " [ 0.  0. -1.]]\n",
+        "\n",
+        "[[-1.  0.  0.]\n",
+        " [ 0. -1.  0.]\n",
+        " [ 0.  0.  1.]]\n",
+        "\n",
+        "[[-1.  0.  0.]\n",
+        " [ 0.  0. -1.]\n",
+        " [ 0. -1.  0.]]\n",
+        "\n",
+        "[[-1.  0.  0.]\n",
+        " [ 0.  0.  1.]\n",
+        " [ 0.  1.  0.]]\n",
+        "\n",
+        "[[ 0.  1.  0.]\n",
+        " [-1.  0.  0.]\n",
+        " [ 0.  0.  1.]]\n",
+        "\n",
+        "[[ 0.  1.  0.]\n",
+        " [ 0.  0. -1.]\n",
+        " [-1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  1.  0.]\n",
+        " [ 1.  0.  0.]\n",
+        " [ 0.  0. -1.]]\n",
+        "\n",
+        "[[ 0.  1.  0.]\n",
+        " [ 0.  0.  1.]\n",
+        " [ 1.  0.  0.]]\n",
+        "\n",
+        "[[ 0. -1.  0.]\n",
+        " [ 1.  0.  0.]\n",
+        " [ 0.  0.  1.]]\n",
+        "\n",
+        "[[ 0. -1.  0.]\n",
+        " [ 0.  0. -1.]\n",
+        " [ 1.  0.  0.]]\n",
+        "\n",
+        "[[ 0. -1.  0.]\n",
+        " [-1.  0.  0.]\n",
+        " [ 0.  0. -1.]]\n",
+        "\n",
+        "[[ 0. -1.  0.]\n",
+        " [ 0.  0.  1.]\n",
+        " [-1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  0.  1.]\n",
+        " [ 0.  1.  0.]\n",
+        " [-1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  0.  1.]\n",
+        " [ 1.  0.  0.]\n",
+        " [ 0.  1.  0.]]\n",
+        "\n",
+        "[[ 0.  0.  1.]\n",
+        " [ 0. -1.  0.]\n",
+        " [ 1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  0.  1.]\n",
+        " [-1.  0.  0.]\n",
+        " [ 0. -1.  0.]]\n",
+        "\n",
+        "[[ 0.  0. -1.]\n",
+        " [ 0.  1.  0.]\n",
+        " [ 1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  0. -1.]\n",
+        " [-1.  0.  0.]\n",
+        " [ 0.  1.  0.]]\n",
+        "\n",
+        "[[ 0.  0. -1.]\n",
+        " [ 0. -1.  0.]\n",
+        " [-1.  0.  0.]]\n",
+        "\n",
+        "[[ 0.  0. -1.]\n",
+        " [ 1.  0.  0.]\n",
+        " [ 0. -1.  0.]]\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 163
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "poly_diff(1, 0, 0, Phi)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "float(math.factorial(1 - 1) * math.factorial(1 + 0)) / float((math.factorial(1 + 1) * math.factorial(1 - 0)))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
